--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,19 @@
 {
     "manifest_version": 3,
     "name": "Reloj Mundial",
-    "version": "1.0",
+    "version": "1.1",
     "description": "Una extencion que muestra la hora seleccionando el pais deseado",
     "icons": {
-        "16": "icon16.png",
-        "48": "icon48.png",
-        "128": "icon128.png"
+        "16": "icon/icon16.png",
+        "48": "icon/icon48.png",
+        "128": "icon/icon128.png"
     },
     "action": {
       "default_popup": "popup.html",
       "default_icon": {
-        "16": "icon16.png",
-        "48": "icon48.png",
-        "128": "icon128.png"
+        "16": "icon/icon16.png",
+        "48": "icon/icon48.png",
+        "128": "icon/icon128.png"
       }
     },
     "permissions": [],
